Added first three sections.

--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -190,12 +190,17 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="DbContexts\ProfileInformationDbContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AdditionalCoursesViewModel.cs" />
+    <Compile Include="Models\EducationViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PersonalInformationViewModel.cs" />
+    <Compile Include="Models\ProfilePicture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -206,16 +211,71 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\add.png" />
     <Content Include="Content\Images\add_h.png" />
+    <Content Include="Content\Images\amrop_s2b_rbg.jpg" />
+    <Content Include="Content\Images\amrop_s2b_rbg_new.jpg" />
+    <Content Include="Content\Images\arrow.png" />
+    <Content Include="Content\Images\bg_1.png" />
+    <Content Include="Content\Images\bg_2.png" />
+    <Content Include="Content\Images\block.jpg" />
+    <Content Include="Content\Images\check.png" />
+    <Content Include="Content\Images\check_h.png" />
+    <Content Include="Content\Images\close.png" />
+    <Content Include="Content\Images\close_2.png" />
+    <Content Include="Content\Images\close_2_h.png" />
+    <Content Include="Content\Images\close_3.png" />
+    <Content Include="Content\Images\close_h.png" />
+    <Content Include="Content\Images\comment.png" />
+    <Content Include="Content\Images\comment_h.png" />
     <Content Include="Content\Images\compl.png" />
+    <Content Include="Content\Images\dec_1.png" />
     <Content Include="Content\Images\default_pic.png" />
+    <Content Include="Content\Images\docs.png" />
+    <Content Include="Content\Images\docs_h.png" />
+    <Content Include="Content\Images\dot.png" />
+    <Content Include="Content\Images\down.svg" />
     <Content Include="Content\Images\drop.png" />
+    <Content Include="Content\Images\edit.png" />
+    <Content Include="Content\Images\edit_h.png" />
+    <Content Include="Content\Images\export.png" />
+    <Content Include="Content\Images\export_h.png" />
+    <Content Include="Content\Images\fb.png" />
     <Content Include="Content\Images\head_1.png" />
+    <Content Include="Content\Images\history.png" />
+    <Content Include="Content\Images\history_h.png" />
+    <Content Include="Content\Images\info.png" />
+    <Content Include="Content\Images\info_h.png" />
+    <Content Include="Content\Images\li.png" />
+    <Content Include="Content\Images\linked.png" />
+    <Content Include="Content\Images\linked_new.png" />
     <Content Include="Content\Images\logaout.png" />
     <Content Include="Content\Images\logaout_h.png" />
+    <Content Include="Content\Images\logo.png" />
     <Content Include="Content\Images\logo_2.png" />
+    <Content Include="Content\Images\logo_3.png" />
+    <Content Include="Content\Images\logo_3_new.png" />
+    <Content Include="Content\Images\next.png" />
+    <Content Include="Content\Images\next_h.png" />
+    <Content Include="Content\Images\pdf.png" />
+    <Content Include="Content\Images\pdf_h.png" />
+    <Content Include="Content\Images\per_dots.png" />
+    <Content Include="Content\Images\pop_close.png" />
+    <Content Include="Content\Images\pptx.png" />
+    <Content Include="Content\Images\pptx_h.png" />
+    <Content Include="Content\Images\prev.png" />
     <Content Include="Content\Images\preview.png" />
+    <Content Include="Content\Images\prev_h.png" />
+    <Content Include="Content\Images\print.png" />
+    <Content Include="Content\Images\print_h.png" />
+    <Content Include="Content\Images\remove.png" />
+    <Content Include="Content\Images\search_1.png" />
+    <Content Include="Content\Images\search_1_h.png" />
+    <Content Include="Content\Images\skype.png" />
+    <Content Include="Content\Images\skype_new.png" />
     <Content Include="Content\Images\tab_close.png" />
     <Content Include="Content\Images\tab_close_h.png" />
+    <Content Include="Content\Images\up.svg" />
+    <Content Include="Content\Images\word-stripes.png" />
+    <Content Include="Content\Images\word-stripes_.png" />
     <Content Include="Content\Legacy\bootstrap-datetimepicker.min.css" />
     <Content Include="Content\Legacy\croppie.css" />
     <Content Include="Content\Legacy\js\autosize.js" />
@@ -226,10 +286,11 @@
     <Content Include="Content\Legacy\js\vendor\jquery.min.js" />
     <Content Include="Content\Legacy\js\vendor\moment.js" />
     <Content Include="Content\Legacy\style.css" />
+    <Content Include="Content\main.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\Legacy\js\vendor\jquery.mCustomScrollbar.concat.min.js" />
@@ -237,6 +298,10 @@
     <Content Include="Content\Legacy\fonts\ufonts.com_dax-regular.ttf" />
     <Content Include="Content\Legacy\fonts\ufonts.com_dax-regular.woff" />
     <Content Include="Content\Legacy\fonts\ufonts.com_dax-regular.woff2" />
+    <Content Include="Content\fonts\ufonts.com_dax-regular.eot" />
+    <Content Include="Content\fonts\ufonts.com_dax-regular.ttf" />
+    <Content Include="Content\fonts\ufonts.com_dax-regular.woff" />
+    <Content Include="Content\fonts\ufonts.com_dax-regular.woff2" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -284,9 +349,15 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Shared\_LegacyLayout.cshtml" />
+    <Content Include="Views\Profile\Renewed.cshtml" />
+    <Content Include="Views\Shared\_FileUpload.cshtml" />
+    <Content Include="Views\Shared\_PersonalInformation.cshtml" />
+    <Content Include="Views\Shared\_Education.cshtml" />
+    <Content Include="Views\Shared\_AdditionalCourses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
