--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -190,6 +190,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CvController.cs" />
     <Compile Include="Controllers\FileDeletionController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -233,6 +234,7 @@
     <Compile Include="Models\AdditionalCommentsViewModel.cs" />
     <Compile Include="Models\AdditionalCoursesViewModel.cs" />
     <Compile Include="Models\AdditionalFilesViewModel.cs" />
+    <Compile Include="Models\AdminOverviewViewModel.cs" />
     <Compile Include="Models\CareerSummaryViewModel.cs" />
     <Compile Include="Models\CompensationViewModel.cs" />
     <Compile Include="Models\Database\AdditionalCourse.cs" />
@@ -249,11 +251,13 @@
     <Compile Include="Models\FileUploadViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\LanguageViewModel.cs" />
+    <Compile Include="Models\LoginPartialViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipViewModel.cs" />
     <Compile Include="Models\NoticePeriodViewModel.cs" />
     <Compile Include="Models\PersonalInformationViewModel.cs" />
     <Compile Include="Models\ProfileViewModel.cs" />
+    <Compile Include="Models\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -427,6 +431,9 @@
     <Content Include="Views\Shared\_AdditionalComments.cshtml" />
     <Content Include="Views\Shared\_AdditionalFiles.cshtml" />
     <Content Include="Views\Shared\_AddAdditionalFile.cshtml" />
+    <Content Include="Views\Admin\Overview.cshtml" />
+    <Content Include="Views\Admin\_AdminLayout.cshtml" />
+    <Content Include="Views\Account\_AccountLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
