--- a/CV.Management.Web/packages.config
+++ b/CV.Management.Web/packages.config
@@ -31,6 +31,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="NLog" version="4.6.2" targetFramework="net461" />
+  <package id="NLog.Config" version="4.6.2" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.6.2" targetFramework="net461" />
+  <package id="NLog.Web" version="4.8.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.26.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
