--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -234,6 +234,10 @@
     <Compile Include="MigrationsApp\201903091707076_AdditionalFiles.Designer.cs">
       <DependentUpon>201903091707076_AdditionalFiles.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsApp\201905061644151_PhoneCode.cs" />
+    <Compile Include="MigrationsApp\201905061644151_PhoneCode.Designer.cs">
+      <DependentUpon>201905061644151_PhoneCode.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsApp\Configuration.cs" />
     <Compile Include="Migrations\201902272154540_Initial.cs" />
     <Compile Include="Migrations\201902272154540_Initial.Designer.cs">
@@ -365,6 +369,7 @@
     <Content Include="Content\Legacy\js\vendor\moment.js" />
     <Content Include="Content\Legacy\style.css" />
     <Content Include="Content\main.css" />
+    <Content Include="EF.txt" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -387,6 +392,7 @@
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\cv-management-app - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -487,12 +493,16 @@
     <EmbeddedResource Include="MigrationsApp\201903091707076_AdditionalFiles.resx">
       <DependentUpon>201903091707076_AdditionalFiles.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsApp\201905061644151_PhoneCode.resx">
+      <DependentUpon>201905061644151_PhoneCode.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902272154540_Initial.resx">
       <DependentUpon>201902272154540_Initial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources.lv.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.lv.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
