Splitted FromTime/ToTime in career summary

--- a/CV.Management.Web/CV.Management.Web.csproj
+++ b/CV.Management.Web/CV.Management.Web.csproj
@@ -242,6 +242,10 @@
     <Compile Include="MigrationsApp\201905192039136_SkypeToOther.Designer.cs">
       <DependentUpon>201905192039136_SkypeToOther.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsApp\201907061550210_SplitTimeInMonth.cs" />
+    <Compile Include="MigrationsApp\201907061550210_SplitTimeInMonth.Designer.cs">
+      <DependentUpon>201907061550210_SplitTimeInMonth.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsApp\Configuration.cs" />
     <Compile Include="Migrations\201902272154540_Initial.cs" />
     <Compile Include="Migrations\201902272154540_Initial.Designer.cs">
@@ -503,6 +507,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsApp\201905192039136_SkypeToOther.resx">
       <DependentUpon>201905192039136_SkypeToOther.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsApp\201907061550210_SplitTimeInMonth.resx">
+      <DependentUpon>201907061550210_SplitTimeInMonth.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902272154540_Initial.resx">
       <DependentUpon>201902272154540_Initial.cs</DependentUpon>
