Added LV version of PPT generation.

--- a/CV.Management.Generation.Ppt/CV.Management.Generation.Ppt.csproj
+++ b/CV.Management.Generation.Ppt/CV.Management.Generation.Ppt.csproj
@@ -69,8 +69,10 @@
     <Compile Include="Helpers\GenerateTableStylesPartHelper.cs" />
     <Compile Include="Helpers\GenerateThemePartHelper.cs" />
     <Compile Include="Helpers\GenerateViewPropertiesPartHelper.cs" />
+    <Compile Include="PresentationMetadataTexts.cs" />
     <Compile Include="PresentationDocumentManager.cs" />
     <Compile Include="PresentationGenerationData.cs" />
+    <Compile Include="PresentationMetadataTextsEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
