Downgraded to jQuery 3.4.1

--- a/CV.Management.Web/Web.config
+++ b/CV.Management.Web/Web.config
@@ -16,7 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="InstrumentationKey" value="your instrumentation key" />
+    <add key="InstrumentationKey" value="2076ebb2-04b8-4991-9692-1757c61523c2" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
