--- a/CV.Management.Web/Web.Release.config
+++ b/CV.Management.Web/Web.Release.config
@@ -15,6 +15,15 @@
     </connectionStrings>
   -->
 
+  <appSettings>
+    <add key="InstrumentationKey" value="c710e967-cba5-4333-9e0b-67d57ebe5959" />
+    <add key="InstrumentationKey" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+  </appSettings>
+
+  <!--<connectionStrings>
+    <add xdt:Transform="Remove" />
+  </connectionStrings>-->
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
